[package]
name        = "zoc"
version     = "0.1.0"
edition     = "2021"
license     = "BlueOak-1.0.0"
description = "Z-order curve based multidimensional range search"
repository  = "https://github.com/twittner/zoc"
keywords    = ["z-order", "morton"]
exclude     = [".github"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
minicbor   = { version = "0.24.0", features = ["derive"], optional = true }
serde      = { version = "1.0.203", features = ["derive"], optional = true }

[dev-dependencies]
criterion  = "0.5.1"
quickcheck = "1.0.3"
rand       = "0.8.5"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
strip = true
