[package]
name        = "zoc"
version     = "0.5.0"
edition     = "2024"
license     = "BlueOak-1.0.0"
description = "Z-order curve based multidimensional range search"
repository  = "https://github.com/twittner/zoc"
keywords    = ["z-order", "morton", "litmax", "bigmin"]
exclude     = [".github"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
minicbor   = { version = "1.0.0", features = ["derive"], optional = true }
serde      = { version = "1.0.203", features = ["derive"], optional = true }

[dev-dependencies]
arbitrary = "1.3.2"
criterion = "0.5.1"
rand      = "0.9.0"

[[bench]]
name    = "benchmark"
harness = false

[profile.release]
codegen-units = 1
lto           = true

[profile.bench]
codegen-units = 1
lto           = true
strip         = true
